# nonebot_plugin_club255

./: .env.dev  .gitignore  __init__.py  bot.py  pyproject.toml  readme.md  tool.py
club255-web/: .eslintrc.json  .eslintrc.yml  .prettierrc  index.html  package.json  pnpm-lock.yaml
club255-web/src/: Show.tsx  Show.vue  main.tsx  router.ts
club255-web/src/views/: HelloWorld.vue
nonebot_plugin_club255/: __init__.py  config.py  matcher.py  static.py  tool.py  types.py
nonebot_plugin_club255/client/: __init__.py  api.py  client.py  models.py
nonebot_plugin_club255/db/: models.py
nonebot_plugin_club255/draw/: __init__.py  api.py
nonebot_plugin_club255/draw/rank/: __init__.py
nonebot_plugin_club255/draw/templates/: base.html.jinja2  rank.html.jinja2
nonebot_plugin_club255/plugins/: bind.py  rank.py  sign.py
nonebot_plugin_club255/plugins/router/: __init__.py  app.py
nonebot_plugin_club255/utils/: __init__.py  client.py  cmd.py  depends.py  matcher.py  rule.py  time.py
nonebot_plugin_club255/utils/cache/: file_cache.py
